--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_local_notifications: ^15.1.1
-  flutter_timezone: ^1.0.7
+  # flutter_timezone: ^1.0.7
   rxdart: ^0.27.7
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
